@@ -196,17 +196,18 @@ if (OLDDNSSEC) {
 	foreach my $type (qw(SIG DS DLV DNSKEY KEY NXT NSEC)) {
 		new Net::DNS::RR( type => $type );
 	}
-}
 
-sub INIT {				## safe to ignore "Too late to run" warning
-					## only needed to satisfy DNSSEC t/00-load.t
+	eval {
+		no warnings 'void';	## suppress "Too late to run INIT block ..."
 
-	# attempt to pre-load RRs which have circular dependence problems
-	if (OLDDNSSEC) {
-		foreach my $type (qw(NSEC3 NSEC3PARAM)) {
-			new Net::DNS::RR( type => $type );
+		sub INIT {		## only needed to satisfy DNSSEC t/00-load.t
+
+			# attempt to pre-load RRs which have circular dependence problems
+			foreach my $type (qw(NSEC3 NSEC3PARAM)) {
+				new Net::DNS::RR( type => $type );
+			}
 		}
-	}
+	};
 }
 
 
